--- a/Project_sem_3/Areas/Admin/Views/InsurancePackages/Deleted.cshtml
+++ b/Project_sem_3/Areas/Admin/Views/InsurancePackages/Deleted.cshtml
@@ -61,7 +61,7 @@
 
 
                                         <tr>
-                                            @*<th rowspan="1" colspan="1"><input type="checkbox" id="checkAll_InsurancePackage" />Select All</th>*@
+                                            <th rowspan="1" colspan="1"><input type="checkbox" id="checkAll_InsurancePackage" />Select All</th>
                                             <th rowspan="1" colspan="1">Insurance Name</th>
                                             <th rowspan="1" colspan="1">Name</th>
                                             @*<th rowspan="1" colspan="1">Description</th>*@
@@ -80,128 +80,151 @@
 
                                         @foreach (var item in Model)
                                         {
-                                        <tr role="row" class="odd">
-                                            @*<td>
-                                                <input type="checkbox" class="check" value="@item.Id" />
-                                                @Html.AntiForgeryToken()
-                                            </td>*@
-                                            <td class="sorting_1">
-                                                @item.Insurance.Name
-                                            </td>
-                                            <td>@item.Name</td>
-                                            @*<td>@item.Description</td>*@
-                                            <td>@item.Price</td>
-                                            @*<td>@item.DurationContract</td>
-                                                <td>@item.DurationPay</td>*@
-                                            <td>@item.CreatedAt</td>
-                                            <td>@item.Status</td>
-                                            <td>
-                                                <span>
-                                                    @*<button class="btn btn-success">@Html.ActionLink("Edit", "Edit", new { id = item.Id })</button>
-                                                        <button class="btn btn-primary">@Html.ActionLink("Details", "Details", new { id = item.Id })</button>*@
-                                                    @*<button class="btn btn-danger">@Html.ActionLink("Back to list", "ChangeStatus", new { id = item.Id })</button>*@
-                                                    <button class="btn btn-success" id="action_return">Return Action</button>
-                                                </span>
-                                            </td>
-                                        </tr>
-                                    }
+                                            <tr role="row" class="odd">
+                                                <td>
+                                                    <input type="checkbox" class="check" value="@item.Id" />
+                                                    @Html.AntiForgeryToken()
+                                                </td>
+                                                <td class="sorting_1">
+                                                    @item.Insurance.Name
+                                                </td>
+                                                <td>@item.Name</td>
+                                                @*<td>@item.Description</td>*@
+                                                <td>@item.Price</td>
+                                                @*<td>@item.DurationContract</td>
+                                                    <td>@item.DurationPay</td>*@
+                                                <td>@item.CreatedAt</td>
+                                                <td>@item.Status</td>
+                                                <td>
+                                                    <span>
+                                                        <button class="btn btn-primary">@Html.ActionLink("Details", "Details", new { id = item.Id })</button>
+                                                    </span>
+                                                </td>
+                                            </tr>
+                                        }
 
-                                        </tbody>
-                                    </table>
+                                    </tbody>
+                                </table>
+                                <div class="card-footer">
+                                    <div class="row mt-3">
+                                        <div class="col-3 mt-2">
+                                            <div class="form-group mr-3">
+                                                <select class="form-control mr-2" id="select-action">
+                                                    <option value="6">--Chọn thao tác--</option>
+                                                    <option value="1">Active Return</option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <div class="col-9" style="margin-top: 8px;">
+                                            <button type="button" id="return_insurancePackage" class="btn btn-success">Confirm</button>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
-                            <div class="row">
-                                <div class="col-sm-12 col-md-5">
-                                    <div class="dataTables_info" id="dataTable_info" role="status" aria-live="polite">Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount</div>
-                                </div>
-                                <div class="col-sm-12 col-md-3"></div>
-                                <div class="col-sm-12 col-md-4">
-                                    @Html.PagedListPager(Model, page => Url.Action("Deleted", new { page }),
-                                   new PagedListRenderOptions()
-                                   {
-                                       LiElementClasses = new List<string> { "text-paging" }
-                                   })
-                                </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm-12 col-md-5">
+                                <div class="dataTables_info" id="dataTable_info" role="status" aria-live="polite">Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount</div>
+                            </div>
+                            <div class="col-sm-12 col-md-3"></div>
+                            <div class="col-sm-12 col-md-4">
+                                @Html.PagedListPager(Model, page => Url.Action("Deleted", new { page }),
+                               new PagedListRenderOptions()
+                               {
+                                   LiElementClasses = new List<string> { "text-paging" }
+                               })
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-
         </div>
-        <!-- /.container-fluid -->
+
     </div>
+    <!-- /.container-fluid -->
+</div>
 
-    @section Scripts{
-        @Scripts.Render("~/bundles/jqueryval")
-        <script type="text/javascript">
-            $(document).ready(function () {
-                var selectedIDs = new Array();
-                $('#checkAll_InsurancePackage').click(function () {
-                    $(".check").prop('checked',
-                        $(this).prop('checked'));
-                })
-
-                $('#action_return').click(function () {
-                    var selectedIDs = new Array();
-                    $('input:checkbox.check').each(function () {
-                        if ($(this).prop('checked')) {
-                            selectedIDs.push($(this).val());
-                        }
-                    });
-                    if (selectedIDs.length <= 0) {
-                        alert('You have not selected insurance package !');
-                        return;
-                    }
-                    $.ajax({
-                        url: "/Admin/InsurancePackages/ChangeStatus",
-                        type: "POST",
-                        dataType: "json",
-                        data: {
-                            __RequestVerificationToken: $('input[name=__RequestVerificationToken]').val(),
-                            selectedIDs
-                        },
-                        success: function (res) {
-                            if (!res == false) {
-                                window.location.reload();
-                            }
-                        },
-                        error: function () {
-                            alert('error');
-                        }
-                    });
-                })
+@section Scripts{
+    @Scripts.Render("~/bundles/jqueryval")
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#checkAll_InsurancePackage').click(function () {
+                $(".check").prop('checked',
+                    $(this).prop('checked'));
             })
-            function handle(e) {
-                if (e.keyCode === 13) {
-                    e.preventDefault();
-                }
+        })
+
+        $('#return_insurancePackage').click(function () {
+            var selectedIDs = new Array();
+            var action = $('#select-action').val();
+            if (action == 6) {
+                alert('Please select the action you want to perform!');
+                return;
             }
-
-            $(function () {
-                $("#pageSize").change(function () {
-                    $("#pagesize").submit();
-                });
+            $('input:checkbox.check').each(function () {
+                if ($(this).prop('checked')) {
+                    selectedIDs.push($(this).val());
+                }
             });
-
-        </script>
-    }
-
-    <style>
-        .text-paging {
-            color: brown;
+            if (selectedIDs.length <= 0) {
+                alert('You have not selected a contract!');
+                return;
+            }
+            if (confirm("Do you want to active return ?")) {
+                changeStatusPTTime(selectedIDs, action);
+            }
+        })
+        function changeStatusPTTime(selectedIDs, action) {
+            $.ajax({
+                url: "/Admin/InsurancePackages/ChangeStatus",
+                type: "POST",
+                dataType: "json",
+                data: {
+                    __RequestVerificationToken: $('input[name=__RequestVerificationToken]').val(),
+                    selectedIDs,
+                    action
+                },
+                success: function (res) {
+                    if (!res == false) {
+                        window.location.reload();
+                    }
+                },
+                error: function () {
+                    alert('error');
+                }
+            });
         }
 
-            .text-paging > a {
-                color: black;
+        function handle(e) {
+            if (e.keyCode === 13) {
+                e.preventDefault();
             }
+        }
 
-        /*.style-sort {
+        $(function () {
+            $("#pageSize").change(function () {
+                $("#pagesize").submit();
+            });
+        });
+
+    </script>
+}
+
+<style>
+    .text-paging {
+        color: brown;
+    }
+
+        .text-paging > a {
+            color: black;
+        }
+
+    /*.style-sort {
                                                             background: url(https://cdn2.iconfinder.com/data/icons/music-player-icons-filled/57/Double_Arrows-512.png) no-repeat right .75rem center/9px 16px;
                                                             background-position: 64px 64px;
                                                         }*/
 
-        .style-sort > a {
-            color: crimson;
-        }
-    </style>
+    .style-sort > a {
+        color: crimson;
+    }
+</style>
