--- a/Project_sem_3/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Project_sem_3/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -325,9 +325,7 @@
                         </div>
                     </li>
 
-                    <div class="topbar-divider d-none d-sm-block"></div>
-
-                    @Html.Partial("_LoginWithAdmin")
+                    <div class="topbar-divider d-none d-sm-block">@Html.Partial("_LoginWithAdmin")</div>
 
                 </ul>
 
