--- a/Project_sem_3/Views/MedicalInsurance/Order.cshtml
+++ b/Project_sem_3/Views/MedicalInsurance/Order.cshtml
@@ -874,7 +874,7 @@
                                 </td>
                                 <td class="align-middle">
                                     <select name="programme" class="custom-select program-selecter" id="program-selecter-1" onchange="CalPHAPremium(1)">
-                                        <option>Choose a program</option>";
+                                        <option value="0">Choose a program</option>";
                                     </select>
                                 </td>
                                 <td class="align-middle">
@@ -1043,25 +1043,61 @@
             var insuranpackageId = $('input[name="insurancePackageId"]:checked').attr("class");
 
             $.each($(".program-selecter option:selected"), function () {
-                selectprogram.push($(this).val());
-                var unitprice = parseInt($(this).attr("class")) + parseInt(insuranpackageId)
-                prices.push(unitprice);
-                programnemname.push($(this).text());
+                if ($(this).val() == '') {
+                    console.log("err")
+                    return false;
+                }
+                else {
+                    phones.push($(this).val());
+
+                    selectprogram.push($(this).val());
+                    var unitprice = parseInt($(this).attr("class")) + parseInt(insuranpackageId)
+                    prices.push(unitprice);
+                    programnemname.push($(this).text());
+                }
             });
 
             $(".Email").each(function () {
+            
+                if ($(this).val() == '') {
+                    console.log("err")
+                    return false;
+                }
+                else {
                 emails.push($(this).val());
+                }
+
+
+
             });
             $(".Address").each(function () {
+                 if ($(this).val() == '') {
+                    console.log("err")
+                    return false;
+                }
+                else {
                 address.push($(this).val());
+                }
             });
 
             $(".Name").each(function () {
+                if ($(this).val() == '') {
+                    console.log("err")
+                    return false;
+                }
+                else {
                 names.push($(this).val());
+                }
             });
 
             $(".Phone").each(function () {
+                if ($(this).val() == '') {
+                    console.log("err")
+                    return false;
+                }
+                else {
                 phones.push($(this).val());
+                }
             });
 
             $(".dateofbirth").each(function () {
@@ -1074,7 +1110,7 @@
 
                 var item =
                 {
-                    'InsurancePackageId' : insuranpakge,
+                    'InsurancePackageId': insuranpakge,
                     'programname': programnemname[i],
                     'unitprice': prices[i],
                     'DateOfbirth': dateofbirths[i],
@@ -1085,7 +1121,7 @@
                     'PhoneNumber': phones[i]
                 };
 
-               
+
                 objects.items.push(item)
             }
 
@@ -1116,30 +1152,30 @@
             var index = $("table tr").length
 
             var html = `<tr id="trid-${index}" class="tr">
-                                                                                                            <td class="align-middle pos-re">
-                                                                                                                    <input name="dateofbirth" type="datetime" class="dateofbirth form-control txt birthDay2" onblur="CalPHAPremium();" />
-                                                                                                                   </td>
-                                                                                                            <td class="align-middle">
-                                                                                                            <select name="programme" class="custom-select program-selecter form-control" id="program-selecter-${index}"onchange="CalPHAPremium(${index})" >
-                                                                                                            </select>
-                                                                                                            </td>
-                                                                                                             <td class="align-middle">
-                                                                                                                                            <input type="text" name="Name" class="Name form-control" value="" />
-                                                                                                                                        </td>
-                                                                                                                                        <td class="align-middle">
-                                                                                                                                            <input type="text" name="Email" class="Email form-control" value="" />
-                                                                                                                                        </td>
-                                                                            <td class="align-middle">
-                                                                                                            <input type="text" name="PhoneNumber" class="Address form-control" value="" />
-                                                                                                        </td>
-                                                                                                                                        <td class="align-middle">
-                                                                                                                                            <input type="text" name="PhoneNumber" class="Phone form-control" value="" />
-                                                                                                                                        </td>
-                                                                                                                                        <td class="text-center align-middle">
-                                                                                                                                            <div class="price-pro"><div name="ctl18$rptPHA1$ctl00$txtPremium_" type="text" value="0" id="displayprice-${index}" class="total form-control txt text-right" </div></div>
-                                                                                                                                        </td >
-                                                                                                                                            <td> <button style="color:red ; text-align:center;background: red; border: none;height: 5px; width: 20px;}" onclick="deleted(${index})"></button></td>
-                                                                                                                                           <tr/>`
+                                                                                                                            <td class="align-middle pos-re">
+                                                                                                                                    <input name="dateofbirth" type="datetime" class="dateofbirth form-control txt birthDay2" onblur="CalPHAPremium();" />
+                                                                                                                                   </td>
+                                                                                                                            <td class="align-middle">
+                                                                                                                            <select name="programme" class="custom-select program-selecter form-control" id="program-selecter-${index}"onchange="CalPHAPremium(${index})" >
+                                                                                                                            </select>
+                                                                                                                            </td>
+                                                                                                                             <td class="align-middle">
+                                                                                                                                                            <input type="text" name="Name" class="Name form-control" value="" />
+                                                                                                                                                        </td>
+                                                                                                                                                        <td class="align-middle">
+                                                                                                                                                            <input type="text" name="Email" class="Email form-control" value="" />
+                                                                                                                                                        </td>
+                                                                                            <td class="align-middle">
+                                                                                                                            <input type="text" name="PhoneNumber" class="Address form-control" value="" />
+                                                                                                                        </td>
+                                                                                                                                                        <td class="align-middle">
+                                                                                                                                                            <input type="text" name="PhoneNumber" class="Phone form-control" value="" />
+                                                                                                                                                        </td>
+                                                                                                                                                        <td class="text-center align-middle">
+                                                                                                                                                            <div class="price-pro"><div name="ctl18$rptPHA1$ctl00$txtPremium_" type="text" value="0" id="displayprice-${index}" class="total form-control txt text-right" </div></div>
+                                                                                                                                                        </td >
+                                                                                                                                                            <td> <button style="color:red ; text-align:center;background: red; border: none;height: 5px; width: 20px;}" onclick="deleted(${index})"></button></td>
+                                                                                                                                                           <tr/>`
             $(".table2").append(html)
 
             getprogramme(index)
@@ -1160,7 +1196,6 @@
         $(document).ready(function () {
             $.getJSON("/MedicalInsurance/ViewProgramme",
                 function (data) {
-                    console.log(data)
                     //Append each row to html table
                     $.each(data.programme, function (key, value) {
 
@@ -1179,7 +1214,7 @@
         function getprogramme(i) {
             $.getJSON("/MedicalInsurance/ViewProgramme",
                 function (data) {
-                    var htmlContentSelecter = " <option>Choose a program</option> "
+                    var htmlContentSelecter = " <option value='0'>Choose a program</option> "
                     console.log(data)
                     //Append each row to html table
                     $.each(data.programme, function (key, value) {
