--- a/Project_sem_3/Areas/Admin/Views/Contracts/Deleted.cshtml
+++ b/Project_sem_3/Areas/Admin/Views/Contracts/Deleted.cshtml
@@ -17,7 +17,7 @@
         <!-- Page Heading -->
         <h1 class="h3 mb-2 text-gray-800">Contracts Deleted</h1>
         <div style="margin-bottom:15px;">
-            <a href="https://localhost:44362/Admin/Contracts/Create" class="btn btn-info" role="button">Create Contracts</a>
+            <a href="https://localhost:44362/Admin/Contracts/" class="btn btn-info" role="button">Contracts</a>
             <a href="https://localhost:44362/Admin/Contracts/Confirmed" class="btn btn-info float-right" role="button">Contracts Confirmed</a>
         </div>
         @*<p class="mb-4"> All contracts of customers about insurances .</p>
