--- a/Project_sem_3/Areas/Admin/Views/Contracts/Index.cshtml
+++ b/Project_sem_3/Areas/Admin/Views/Contracts/Index.cshtml
@@ -40,14 +40,14 @@
             </div>*@
 
         <div style="margin-bottom:15px;">
-            <a href="https://localhost:44362/Admin/Contracts/Create" class="btn btn-info" role="button">Create Contracts</a>
-            <a href="https://localhost:44362/Admin/Contracts/Deleted" class="btn btn-info float-right" role="button">Contracts Deleted</a>
+            <a href="https://localhost:44362/Admin/Contracts/Confirmed" class="btn btn-info" role="button">List Contracts Confirmed</a>
+            <a href="https://localhost:44362/Admin/Contracts/Deleted" class="btn btn-info float-right" role="button">List Contracts Deleted</a>
         </div>
 
         <!-- DataTales Example -->
         <div class="card shadow mb-4">
             <div class="card-header py-3">
-                <h6 class="m-0 font-weight-bold text-primary">DataTables Contract</h6>
+                <h6 class="m-0 font-weight-bold text-primary">List Contract</h6>
             </div>
             <div class="card-body">
                 <div>
@@ -79,17 +79,10 @@
                                         <tr>
                                             <th rowspan="1" colspan="1"><input type="checkbox" id="checkAll" />Select All</th>
                                             <th rowspan="1" colspan="1">Name</th>
-
                                             <th rowspan="1" colspan="1">Insurance</th>
-
                                             <th rowspan="1" colspan="1">Customer</th>
-
-
                                             <th rowspan="1" colspan="1" class="style-sort">@Html.ActionLink("Total Price", "Index", new { sortOrder = ViewBag.PriceSortParm })</th>
                                             <th rowspan="1" colspan="1" class="style-sort">@Html.ActionLink("CreatedAt", "Index", new { sortOrder = ViewBag.DateSortParm })</th>
-
-                                           
-                                            
                                             <th rowspan="1" colspan="1">Action</th>
                                         </tr>
                                     </thead>
@@ -104,19 +97,15 @@
                                                     <input type="checkbox" class="check" value="@item.Id" />
                                                     @Html.AntiForgeryToken()
                                                 </td>
-
                                                 <td class="sorting_1">
                                                     @item.Insurance.Name
-                                                </td>
-
-
-
-
+                                                </td>                         
+                                                <td>@item.Insurance.Name</td>
                                                 <td>@item.ApplicationUserId</td>
 
-                                                <td>@item.TotalPrice</td>
+                                                <td>$@item.TotalPrice</td>
                                                 <td>@item.CreatedAt.ToString("dd-MM-yyyy")</td>
-                                                <td>@item.UpdatedAt.ToString("dd-MM-yyyy")</td>
+                                                
                                                 
                                                 <td>     
                                                     <div class="btn-group">
