--- a/Project_sem_3/Areas/Admin/Views/Contracts/Deleted.cshtml
+++ b/Project_sem_3/Areas/Admin/Views/Contracts/Deleted.cshtml
@@ -17,8 +17,8 @@
         <!-- Page Heading -->
         <h1 class="h3 mb-2 text-gray-800">Contracts Deleted</h1>
         <div style="margin-bottom:15px;">
-            <a href="https://localhost:44362/Admin/Contracts/Create" class="btn btn-info" role="button">Create Contracts</a>
-            <a href="https://localhost:44362/Admin/Contracts/Confirmed" class="btn btn-info float-right" role="button">Contracts Confirmed</a>
+            <a href="https://localhost:44362/Admin/Contracts/Index" class="btn btn-info" role="button">List Contracts</a>
+            
         </div>
         @*<p class="mb-4"> All contracts of customers about insurances .</p>
             <div class="card-footer">
@@ -46,7 +46,7 @@
         <!-- DataTales Example -->
         <div class="card shadow mb-4">
             <div class="card-header py-3">
-                <h6 class="m-0 font-weight-bold text-primary">DataTables Contract</h6>
+                <h6 class="m-0 font-weight-bold text-primary">List Contract Deleted</h6>
             </div>
             <div class="card-body">
                 <div class="table-responsive">
@@ -79,7 +79,7 @@
                                             <th rowspan="1" colspan="1">Total Price</th>
                                             <th rowspan="1" colspan="1">Created At</th>
                                             @*<th rowspan="1" colspan="1">Updated At</th>*@
-                                            <th rowspan="1" colspan="1">Status</th>
+                                           
                                             <th rowspan="1" colspan="1">Action</th>
                                         </tr>
                                     </thead>
@@ -98,11 +98,11 @@
                                                 <td class="sorting_1">
                                                     @item.Insurance.Name
                                                 </td>
-                                                <td>@item.ApplicationUser.UserName</td>
-                                                <td>@item.TotalPrice</td>
-                                                <td>@item.CreatedAt</td>
+                                                <td>@item.Insurance.Name</td>
+                                                <td>$@item.TotalPrice</td>
+                                                <td>@item.CreatedAt.ToString("dd-MM-yyyy")</td>
                                                 @*<td>@item.UpdatedAt</td>*@
-                                                <td>@item.Status</td>
+                                                
                                                 <td>
                                                     <button class="btn btn-success">@Html.ActionLink("Confirm", "Edit", new { id = item.Id })</button>
                                                     <button class="btn btn-primary">
