--- a/Project_sem_3/Areas/Admin/Views/InsurancePackages/Index.cshtml
+++ b/Project_sem_3/Areas/Admin/Views/InsurancePackages/Index.cshtml
@@ -29,7 +29,7 @@
         <!-- DataTales Example -->
         <div class="card shadow mb-4">
             <div class="card-header py-3">
-                <h6 class="m-0 font-weight-bold text-primary">DataTables Contract</h6>
+                <h6 class="m-0 font-weight-bold text-primary">List Insurances Package</h6>
             </div>
             <div class="card-body">
                 <div>
@@ -58,22 +58,7 @@
                         </div>
                         <div class="row">
                             <div class="col-sm-12">
-                                <div class="card-footer">
-                                    <div class="row mt-3">
-                                        <div class="col-3 mt-2">
-                                            <div class="form-group mr-3">
-                                                <select class="form-control mr-2" id="select-action">
-                                                    <option value="6">--Chọn thao tác--</option>
-                                                    <option value="0">Action</option>
-                                                    <option value="-1">Deleted</option>
-                                                </select>
-                                            </div>
-                                        </div>
-                                        <div class="col-9">
-                                            <button type="button" class="btn btn-success" style="margin-top: 8px;" id="action_contract">Confirm</button>
-                                        </div>
-                                    </div>
-                                </div>
+                                
                                 <table class="table table-bordered dataTable" id="dataTable" width="100%" cellspacing="0" role="grid" aria-describedby="dataTable_info" style="width: 100%;">
                                     <thead>
 
@@ -99,7 +84,7 @@
 
                                     <tbody>
 
-                                       *@foreach (var item in Model)
+                                       @foreach (var item in Model)
                                         {
 
                                             <tr role="row" class="odd">
@@ -131,7 +116,22 @@
                                         }
                                     </tbody>
                                 </table>
-                                
+                                <div class="card-footer">
+                                    <div class="row mt-3">
+                                        <div class="col-3 mt-2">
+                                            <div class="form-group mr-3">
+                                                <select class="form-control mr-2" id="select-action">
+                                                    <option value="6">--Chọn thao tác--</option>
+                                                    <option value="0">Action</option>
+                                                    <option value="-1">Deleted</option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <div class="col-9">
+                                            <button type="button" class="btn btn-success" style="margin-top: 8px;" id="action_contract">Confirm</button>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         <div class="row">
