--- a/Project_sem_3/Areas/Admin/Views/Programmes/Index.cshtml
+++ b/Project_sem_3/Areas/Admin/Views/Programmes/Index.cshtml
@@ -57,18 +57,7 @@
 
                         </div>
                         <div class="row">
-                            <div class="col-3 mt-2">
-                                <div class="form-group mr-3">
-                                    <select class="form-control mr-2" id="select-action">
-                                        <option value="6">--Chọn thao tác--</option>
-                                        <option value="0">Action</option>
-                                        <option value="-1">Deleted</option>
-                                    </select>
-                                </div>
-                            </div>
-                            <div class="col-9">
-                                <button type="button" class="btn btn-success" id="action_contract" style="margin-top: 8px;">Xác nhận</button>
-                            </div>
+                            
                             <div class="col-sm-12">
                                 <table class="table table-bordered dataTable" id="dataTable" width="100%" cellspacing="0" role="grid" aria-describedby="dataTable_info" style="width: 100%;">
                                     <thead>
@@ -104,7 +93,21 @@
                                             </tr>
                                         }
                                     </tbody>
-                                </table>
+                                </table>  
+                                <div class="row">
+                                    <div class="col-3 mt-2">
+                                        <div class="form-group mr-3">
+                                            <select class="form-control mr-2" id="select-action">
+                                                <option value="6">--Chọn thao tác--</option>
+                                                <option value="0">Action</option>
+                                                <option value="-1">Deleted</option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                    <div class="col-9">
+                                        <button type="button" class="btn btn-success" id="action_contract" style="margin-top: 8px;">Xác nhận</button>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                         <div class="row">
