--- a/Project_sem_3/Areas/Admin/Views/Role/CreateAdmin.cshtml
+++ b/Project_sem_3/Areas/Admin/Views/Role/CreateAdmin.cshtml
@@ -5,65 +5,72 @@
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
-<h2>View</h2>
-
-@using (Html.BeginForm("CreateAdmin", "Role", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+<h2>Create User</h2>
+  
+@using (Html.BeginForm("CreateAdmin", "Role", FormMethod.Post, new { @class = "container form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
     <h4>Create a new account.</h4>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class="form-group">
+    <div class="form-group row">
         @Html.LabelFor(m => m.RoleName, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
             @Html.DropDownListFor(m => m.RoleName, new SelectList(ViewBag.Roles, "Value", "Text"), new { @class = "col-md-2 control-label" })
         </div>
     </div>
-    <div class="form-group">
+    <div class="form-group row">    
         @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
             @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
         </div>
     </div>
-    <div class="form-group">
+    <div class="form-group row">  
         @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
             @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
         </div>
     </div>
-    <div class="form-group">
+    <div class="form-group row">   
         @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
         <div class="col-md-10">
-            @Html.TextAreaFor(m => m.ConfirmPassword, new { @class = "form-control" })
+            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
         </div>
     </div>
-    <div class="form-group">
+    <div class="form-group row">
         @Html.LabelFor(m => m.Address, new { @class = "col-md-2 control-label" })
+        
         <div class="col-md-10">
             @Html.TextAreaFor(m => m.Address, new { @class = "form-control" })
         </div>
     </div>
-    <div class="form-group">
+    <div class="form-group row">
         @Html.LabelFor(m => m.Name, new { @class = "col-md-2 control-label" })
+        
         <div class="col-md-10">
             @Html.TextAreaFor(m => m.Name, new { @class = "form-control" })
         </div>
     </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.PhoneNumber, new { @class = "col-md-2 control-label" })
+    <div class="form-group row">
+       @Html.LabelFor(m => m.PhoneNumber, new { @class = "col-md-2 control-label" })
+       
         <div class="col-md-10">
             @Html.TextAreaFor(m => m.PhoneNumber, new { @class = "form-control" })
         </div>
     </div>
-    <div>
-        Male
-        @Html.RadioButtonFor(model => model.Gender, "Male")
-        Female
-        @Html.RadioButtonFor(model => model.Gender, "Female")
+    <div class="row">      
+        <div class="col-md-2">Gender</div>        
+        <div class="col-md-10">
+             Male
+            @Html.RadioButtonFor(model => model.Gender, "Male")
+            Female
+            @Html.RadioButtonFor(model => model.Gender, "Female")
+        </div>
+        
     </div>
     <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" class="btn btn-default" value="Register" />
+        <div class="col-md-offset-2 col-md-10 float-lg-right" style="margin-top: 20px;">
+            <input type="submit" class="btn btn-success" value="Register" />
         </div>
     </div>
 }
