--- a/Project_sem_3/Views/Home/HouseInsurance.cshtml
+++ b/Project_sem_3/Views/Home/HouseInsurance.cshtml
@@ -447,6 +447,7 @@
         border-spacing: 0;
         font: inherit;
         border: 1px solid #D9D9D9;
+        background-color: #f7f7f7!important;
     }
 
         table tr {
