--- a/Project_sem_3/Views/Home/MotorInsurance.cshtml
+++ b/Project_sem_3/Views/Home/MotorInsurance.cshtml
@@ -190,5 +190,8 @@
     .myriad_pro_semibold a {
         font-weight: bold;
     }
+    .table-bordered{
+            background-color: #f7f7f7!important;
+    }
 </style>
 
