--- a/Project_sem_3/Views/Home/Index.cshtml
+++ b/Project_sem_3/Views/Home/Index.cshtml
@@ -6,12 +6,12 @@
 <div class="hero hero-slider">
     <ul class="slides">
         @*<li data-bg-image="/Content/dummy/slide-1.jpg">*@
-        <li style="width:100px" data-bg-image="/Content/dummy/Index.jpg">
+        <li style="width:100px" data-bg-image="https://www.homesteadins.com/wp-content/uploads/2019/05/homeowners-insurance-ohio.jpg">
             <div class="container">
                 <div class="slide-content">
                     <h2 class="slide-title">Get your <strong>Life Insurance</strong></h2>
                     <p>Insurance is a means of protection from financial loss. It is a form of risk management, primarily used to hedge against the risk of a contingent or uncertain loss.The insured receives a contract, called the insurance policy.</p>
-                    <a href="#" class="button">Get a quote</a>
+                    <a href="" class="button">Get a quote</a>
                 </div>
             </div>
         </li>
@@ -27,7 +27,7 @@
             </div>
         </li>
         @*<li data-bg-image="/Content/dummy/slide-3.jpg">*@
-        <li data-bg-image="/Content/dummy/Index_3.jpg">
+        <li data-bg-image="https://www.nyoooz.com/moxie_uploads/benefits-of-two-wheeler-insurance-renewal.jpg">
             <div class="container">
                 <div class="slide-content">
                     <h2 class="slide-title">Get your <strong>Life Insurance</strong></h2>
@@ -54,14 +54,14 @@
     <div class="fullwidth-block greet-section">
         <div class="container">
             <h2 class="section-title">Welcome to our website</h2>
-            <small class="section-subtitle">Etiam suscipit leo tincidunt risus dignissim quisque semper mollis</small>
+            <small class="section-subtitle">Insurance is a means of protection from financial loss</small>
 
             <div class="row">
                 <div class="col-md-3">
                     <div class="feature">
                         <i class="icon-phone-24"></i>
                         <h3 class="feature-title">24 hours Service</h3>
-                        <p>A firm understanding of these concepts goes a long way in helping you choose the policy that best suits your needs.</p>
+                        <p>t 24 Hour Insurance Services, we put our focus on getting you the most affordable auto insurance policy </p>
                     </div>
                 </div>
                 <div class="col-md-3">
@@ -75,14 +75,14 @@
                     <div class="feature">
                         <i class="icon-luggage"></i>
                         <h3 class="feature-title">Praesent pellentesque </h3>
-                        <p>A firm understanding of these concepts goes a long way in helping you choose the policy that best suits your needs.</p>
+                        <p>An entity which provides insurance is known as an insurer, insurance company, insurance carrier or underwriter. </p>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="feature">
                         <i class="icon-credit-card-hand"></i>
                         <h3 class="feature-title">Consectetur interdum</h3>
-                        <p>A firm understanding of these concepts goes a long way in helping you choose the policy that best suits your needs.</p>
+                        <p>The insurance transaction involves the insured assuming a guaranteed and known relatively small loss in the form.</p>
                     </div>
                 </div>
             </div> <!-- .row -->
